--- a/salt/dns/forward.jinja
+++ b/salt/dns/forward.jinja
@@ -1,15 +1,18 @@
+{% set admin_ip = salt['pillar.get']('masters:'~(salt['grains.get']('id')|replace("."~salt['pillar.get']('core:domain_name'),''))~':network:'~salt['pillar.get']('core:admin_network')~':ip') %}
+{% set admin_hostname = (salt['grains.get']('id')|replace("."~salt['pillar.get']('core:domain_name'),'')) %}
+{% set admin_network = salt['pillar.get']('core:admin_network') %}
 $TTL 86400
-@   IN  SOA     {{salt['pillar.get']('engine:master:masterid')}}.{{salt['pillar.get']('engine:network:domaine_name')}}. root.{{salt['pillar.get']('engine:network:domaine_name')}}. (
+@   IN  SOA     {{admin_hostname}}.{{salt['pillar.get']('core:domain_name')}}. root.{{salt['pillar.get']('core:domain_name')}}. (
         2011071001  ;Serial
         3600        ;Refresh
         1800        ;Retry
         604800      ;Expire
         86400       ;Minimum TTL
 )
-@       IN  NS          {{salt['pillar.get']('engine:master:masterid')}}.{{salt['pillar.get']('engine:network:domaine_name')}}.
-@       IN  A           {{salt['pillar.get']('engine:master:masterip')}}
+@       IN  NS          {{admin_hostname}}.{{salt['pillar.get']('core:domain_name')}}.
+@       IN  A           {{admin_ip}}
 
-{{salt['pillar.get']('engine:master:masterid')}}          IN  A   {{salt['pillar.get']('engine:master:masterip')}}
+{{admin_hostname}}          IN  A   {{admin_ip}}
 
 {% for type in salt['pillar.get']('core:types') %}
 ;#############################################
@@ -21,7 +24,7 @@ $TTL 86400
 
 {%- for host, argo in argu.items() %}
 {%- for network, args in argo.network.items() %}
-{%- if network == "net0" %}
+{%- if network == admin_network %}
 {{host}}          IN  A   {{ args.ip }}
 {%- else %}
 {{host}}.{{network}}          IN  A   {{ args.ip }}
