--- a/salt/ntp/ntp.conf.jinja
+++ b/salt/ntp/ntp.conf.jinja
@@ -1,3 +1,4 @@
+{% set admin_network = salt['pillar.get']('core:admin_network') %}
 # For more information about this file, see the man pages
 # ntp.conf(5), ntp_acc(5), ntp_auth(5), ntp_clock(5), ntp_misc(5), ntp_mon(5).
 
@@ -14,7 +15,7 @@ restrict 127.0.0.1
 restrict ::1
 
 # Hosts on local network are less restricted.
-restrict {{salt['pillar.get']('engine:network:subnet')}} mask {{salt['pillar.get']('engine:network:netmask')}} nomodify notrap
+restrict {{salt['pillar.get']('engine_network:'~admin_network~':subnet')}} mask {{salt['pillar.get']('engine_network:'~admin_network~':netmask')}} nomodify notrap
 
 # Use public servers from the pool.ntp.org project.
 # Please consider joining the pool (http://www.pool.ntp.org/join.html).
