--- a/salt/shinken/masters.cfg.jinja
+++ b/salt/shinken/masters.cfg.jinja
@@ -1,9 +1,14 @@
+{% set netadmin = salt['pillar.get']('core:admin_network') %}
 {% for host, args in salt['pillar.get']('masters',{}).items() %}
 define host{
         use                     generic-host
         contact_groups          admins
         host_name               {{ host }}
-        address                 {{ args.network.net0.ip }}
+{%- for network, network_args in args.network.items() %}
+{%- if network == netadmin %}
+        address                 {{ network_args.ip }}
+{%- endif %}
+{%- endfor %}
         hostgroups              master
         }
 {% endfor %}
