--- a/salt/repository/salt.local.repo.jinja
+++ b/salt/repository/salt.local.repo.jinja
@@ -1,5 +1,5 @@
-[salt.local.repo]
+[salt_{{os}}_{{os_release}}.local.repo]
 name=salt local repository
-baseurl=http://{{salt['pillar.get']('core:salt_master_ip')}}/salt.local.repo
+baseurl=http://{{salt['pillar.get']('core:salt_master_ip')}}/salt_{{os}}_{{os_release}}.local.repo
 gpgcheck=0
 enabled=1
