--- a/salt/dumb.jinja
+++ b/salt/dumb.jinja
@@ -1,3 +1,5 @@
+{% import 'include/myself.sls' as ms with context %}
+{{ms.type+ms.subtype+ms.hostname+ms.netpath}}
 Hello World !
 {{salt['pillar.get']('helloworld')}}
-
+{{custom_var}}
