Final part of system for subsystem

--- a/salt/pxe/default.jinja
+++ b/salt/pxe/default.jinja
@@ -9,7 +9,7 @@ MENU TITLE Banquise PXE Menu for {{type}}:{{subtype}}
  LABEL {{os}}_{{os_release}}_INSTALL
  MENU LABEL {{type}} {{subtype}}
  KERNEL /netboot/{{os}}/{{os_release}}/vmlinuz
- APPEND  initrd=/netboot/{{os}}/{{os_release}}/initrd.img  inst.repo=http://{{salt['pillar.get']('engine_connect:repository_server_ip')}}/{{os}}_{{os_release}}.local.repo  ks=http://{{salt['pillar.get']('engine_connect:pxe_server_ip')}}/ks/{{type}}/{{subtype}}/ks.cfg {% if salt['pillar.get'](type~'_system:'~subtype~':kernel_parameters') is not none %}{{salt['pillar.get'](type~'_system:'~subtype~':kernel_parameters')}}{% endif %} {% if salt['pillar.get'](type~'_system:'~subtype~':bmc_console') is not none %}{{salt['pillar.get'](type~'_system:'~subtype~':bmc_console')}}{% endif %}
+ APPEND  initrd=/netboot/{{os}}/{{os_release}}/initrd.img  inst.repo=http://{{salt['pillar.get']('engine_connect:repository_server_ip')}}/{{os}}_{{os_release}}.local.repo  ks=http://{{salt['pillar.get']('engine_connect:pxe_server_ip')}}/ks_{{type}}_{{subtype}}.cfg {% if salt['pillar.get'](type~'_system:'~subtype~':operating_system:kernel_parameters') is not none %}{{salt['pillar.get'](type~'_system:'~subtype~':operating_system:kernel_parameters')}}{% endif %} {% if salt['pillar.get'](type~'_system:'~subtype~':bmc:console') is not none %}{{salt['pillar.get'](type~'_system:'~subtype~':bmc:console')}}{% endif %}
 
  LABEL localdisk
  KERNEL chain.c32 
