--- a/salt/dhcp/dhcpd.conf.jinja
+++ b/salt/dhcp/dhcpd.conf.jinja
@@ -5,6 +5,15 @@
 #   see dhcpd.conf(5) man page
 #
 
+# EFI
+ option space pxelinux;
+ option pxelinux.magic code 208 = string;
+ option pxelinux.configfile code 209 = text;
+ option pxelinux.pathprefix code 210 = text;
+ option pxelinux.reboottime code 211 = unsigned integer 32;
+ option architecture-type code 93 = unsigned integer 16;
+# END EFI
+
  authoritative;
 
  subnet {{ salt['pillar.get']('engine_network:'~admin_network~':subnet') }} netmask {{ salt['pillar.get']('engine_network:'~admin_network~':netmask') }} {
@@ -16,7 +25,12 @@
  max-lease-time 7200;
 
  next-server {{salt['pillar.get']('engine_connect:pxe_server_ip')}};
- filename "pxelinux.0";
+
+ if option architecture-type = 00:07 {
+   filename "shim.efi";
+ } else {
+   filename "pxelinux.0";
+ }
 
 {% for type in salt['pillar.get']('core:types') %}
 #############################################
